F-Curve Cycle modifiers change behavior after editing NLA strip #80708

Closed
opened 2020-09-11 20:58:01 +02:00 by Bob · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.14736 Core Profile Context 20.8.3 27.20.12027.1001

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-13 23:10, hash: 0f61b27e93
Worked: Never (2.80+)

Reproduce:
#80708.blend

  • Open file
  • In dopesheet, click Push Down button.

Play animation

Cycles modifier is active outside of NLA track bounds (it shouldn't be)
If you click on Push Down button in NLA editor, this doesn't happen.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.14736 Core Profile Context 20.8.3 27.20.12027.1001 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-13 23:10, hash: `0f61b27e93` Worked: Never (2.80+) **Reproduce:** [#80708.blend](https://archive.blender.org/developer/F8892144/T80708.blend) - Open file - In dopesheet, click Push Down button. # Play animation Cycles modifier is active outside of NLA track bounds (it shouldn't be) If you click on Push Down button in NLA editor, this doesn't happen.
Author

Added subscriber: @blenderisland

Added subscriber: @blenderisland

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can't reproduce this.

Please download build from https://builder.blender.org/download/ and check if you can reproduce the issue there.

I can't reproduce this. Please download build from https://builder.blender.org/download/ and check if you can reproduce the issue there.
Author

https://youtu.be/XgPeH_VSYDc

Recording of how to reproduce. This is the version linked by Richard Antalik.

https://youtu.be/XgPeH_VSYDc Recording of how to reproduce. This is the version linked by Richard Antalik.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This seems to be about two things:

  1. After pushing down the Action, the cyclic animation is still shown beyond the limits of the NLA strip.
  2. After editing the strip, the cyclic animation is no longer shown beyond the limits of the NLA strip.

The second point seems to be working as designed. You can change the Action Clip properties, for example by setting it to repeat a few times. Then you'll see that the cyclic behaviour is still there.

image.png

The first point seems to be a bug. You can see this by saving and reopening the file; after reopening it behaves in the same way as in point 2.

This seems to be about two things: 1. After pushing down the Action, the cyclic animation is still shown beyond the limits of the NLA strip. 2. After editing the strip, the cyclic animation is no longer shown beyond the limits of the NLA strip. The second point seems to be working as designed. You can change the Action Clip properties, for example by setting it to repeat a few times. Then you'll see that the cyclic behaviour is still there. ![image.png](https://archive.blender.org/developer/F8915955/image.png) The first point seems to be a bug. You can see this by saving and reopening the file; after reopening it behaves in the same way as in point 2.
Sybren A. Stüvel changed title from f-curve cycle modifier breaks after editing nla strip to F-Curve Cycle modifiers change behavior after editing NLA strip 2020-09-24 15:13:53 +02:00
Sybren A. Stüvel self-assigned this 2020-09-24 15:13:53 +02:00

This issue was referenced by f3ac39b857

This issue was referenced by f3ac39b857394d804df04d893517ebd1a403de19

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80708
No description provided.